# autosar_build_system

./: .gitignore  CMakeLists.txt  README.md  build.bat  main.c
asw/: CmakeLists.txt  asw_dummy.c  asw_dummy.h
bsw/: CMakeLists.txt  bsw_dummy.c  bsw_dummy.h
cdd/: CMakeLists.txt  cdd_dummy.c  cdd_dummy.h
mcal/: CMakeLists.txt  mcal_dummy.c  mcal_dummy.h
